# crud_app_practice

./: Cargo.toml  README.md
migrations/: 20230630112411_init.up.sql
src/: main.rs
src/api/: task.rs  user.rs
src/model/: task.rs  user.rs
src/repository/: ddb.rs
