[package]
name = "crud_app_anas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
derive = "1.0.0"
derive_more = "0.99.17"
env_logger = "^0.8"
log = "0.4.19"
serde = { version = "^1", features = ["derive"] }
strum = { version = "^0.24", features = ["derive"] }
strum_macros = "^0.24"
uuid = { version = "^0.8", features = ["v4"] }
