[package]
name = "crud_app_anas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
chrono = "0.4.26"
derive = "1.0.0"
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "^0.8"
log = "0.4.19"
serde = { version = "^1", features = ["derive"] }
serde_json = "1.0.99"
sqlx = { version = "0.6.3", features = ["runtime-actix-rustls", "postgres", "uuid","migrate","macros"] }
strum = { version = "^0.24", features = ["derive"] }
strum_macros = "^0.24"
tokio = "1.29.1"
uuid = { version = "0.8", features = ["v4", "serde"] }
